--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.18.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "sass": "^1.94.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
