--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sass": "^1.94.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=18.0.0",
