--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "sass": "^1.94.0"
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
+    "sass": "^1.94.1",
     "typescript": "^5.9.3"
   },
   "engines": {
